// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels reducer should handle SET_CHANNELS 1`] = `
Array [
  Object {
    "created": "2018-09-07T13:53:10.632115Z",
    "favorited": null,
    "grapecallUrl": "https://uebergrape.staging.chatgrape.com/call/8991",
    "groupMentions": 0,
    "icon": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
    "id": 8991,
    "lastMessage": Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
        "displayName": "cri12348",
        "firstName": "",
        "id": 13761,
        "type": "user",
        "username": "cri12348",
      },
      "cglinks": null,
      "channel": 8991,
      "clientsideId": "tc2es",
      "docType": "message",
      "edited": null,
      "id": "c81e7f6e0ca611ea95ac0242c0a83004",
      "linkAttachments": Array [],
      "mentions": Object {
        "group": Array [],
        "user": Array [],
      },
      "organization": 1,
      "permissions": Object {
        "canDeleteMessage": true,
        "canPinMessage": true,
        "canQuoteMessage": true,
        "canUpdateMessage": true,
      },
      "pinned": false,
      "plainText": "zxcvadsf",
      "text": "zxcvadsf",
      "time": "2019-11-21T21:35:04.976779+00:00",
      "userAttachments": Array [],
      "userTime": "2019-11-21T22:35:04.976779+01:00",
    },
    "mentions": 0,
    "partner": Object {
      "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
      "displayName": "ajv13028",
      "email": "ajv13028@ssdfd.com",
      "hideEmailField": false,
      "id": 2918,
      "pm": null,
      "status": 16,
      "type": "user",
      "username": "ajv13028",
    },
    "type": "pm",
    "unread": 0,
  },
  Object {
    "abbr": "TC",
    "color": "#97A6BD",
    "created": "2018-01-29T17:41:34.196044Z",
    "creator": 2918,
    "description": "Test Channel",
    "favorited": null,
    "groupMentions": 0,
    "icon": "phone",
    "id": 6009,
    "isEncrypted": false,
    "isManaged": false,
    "isPublic": true,
    "lastMessage": Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
        "displayName": "oa+0@chatgrape.com",
        "firstName": "",
        "id": 13761,
        "type": "user",
        "username": "oa+0@chatgrape.com",
      },
      "cglinks": null,
      "channel": 6009,
      "clientsideId": "1pzte2",
      "docType": "message",
      "edited": null,
      "id": "ad3948dc0ca611eaa2650242c0a83004",
      "linkAttachments": Array [],
      "mentions": Object {
        "group": Array [],
        "user": Array [],
      },
      "organization": 1,
      "permissions": Object {
        "canDeleteMessage": false,
        "canPinMessage": true,
        "canQuoteMessage": true,
        "canUpdateMessage": false,
      },
      "pinned": false,
      "plainText": "sc;ksdffjkfjpkfwjpk",
      "text": "sc;ksdffjkfjpkfwjpk",
      "time": "2019-11-21T21:34:19.853846+00:00",
      "userAttachments": Array [],
      "userTime": "2019-11-21T22:34:19.853846+01:00",
    },
    "mentions": 0,
    "name": "Test Channel",
    "notifyRoom": true,
    "referenceLabel": null,
    "referenceUrl": null,
    "serializerClass": "OverviewSerializer",
    "slug": "test-channel",
    "type": "room",
    "unread": 0,
  },
]
`;

exports[`channels reducer should handle correct merge channels on SET_CHANNELS 1`] = `
Array [
  Object {
    "abbr": "TC",
    "color": "#97A6BD",
    "created": "2018-01-29T17:41:34.196044Z",
    "creator": 2918,
    "description": "Test Channel",
    "favorited": null,
    "groupMentions": 0,
    "icon": "phone",
    "id": 6009,
    "isEncrypted": false,
    "isManaged": false,
    "isPublic": true,
    "lastMessage": Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
        "displayName": "oa+0@chatgrape.com",
        "firstName": "",
        "id": 13761,
        "type": "user",
        "username": "oa+0@chatgrape.com",
      },
      "cglinks": null,
      "channel": 6009,
      "clientsideId": "1pzte2",
      "docType": "message",
      "edited": null,
      "id": "ad3948dc0ca611eaa2650242c0a83004",
      "linkAttachments": Array [],
      "mentions": Object {
        "group": Array [],
        "user": Array [],
      },
      "organization": 1,
      "permissions": Object {
        "canDeleteMessage": false,
        "canPinMessage": true,
        "canQuoteMessage": true,
        "canUpdateMessage": false,
      },
      "pinned": false,
      "plainText": "sc;ksdffjkfjpkfwjpk",
      "text": "sc;ksdffjkfjpkfwjpk",
      "time": "2019-11-21T21:34:19.853846+00:00",
      "userAttachments": Array [],
      "userTime": "2019-11-21T22:34:19.853846+01:00",
    },
    "mentions": 0,
    "name": "Test Channel",
    "notifyRoom": true,
    "referenceLabel": null,
    "referenceUrl": null,
    "serializerClass": "OverviewSerializer",
    "slug": "test-channel",
    "type": "room",
    "unread": 0,
  },
  Object {
    "created": "2018-09-07T13:53:10.632115Z",
    "favorited": null,
    "grapecallUrl": "https://uebergrape.staging.chatgrape.com/call/8991",
    "groupMentions": 0,
    "icon": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
    "id": 8991,
    "lastMessage": Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
        "displayName": "cri12348",
        "firstName": "",
        "id": 13761,
        "type": "user",
        "username": "cri12348",
      },
      "cglinks": null,
      "channel": 8991,
      "clientsideId": "tc2es",
      "docType": "message",
      "edited": null,
      "id": "c81e7f6e0ca611ea95ac0242c0a83004",
      "linkAttachments": Array [],
      "mentions": Object {
        "group": Array [],
        "user": Array [],
      },
      "organization": 1,
      "permissions": Object {
        "canDeleteMessage": true,
        "canPinMessage": true,
        "canQuoteMessage": true,
        "canUpdateMessage": true,
      },
      "pinned": false,
      "plainText": "zxcvadsf",
      "text": "zxcvadsf",
      "time": "2019-11-21T21:35:04.976779+00:00",
      "userAttachments": Array [],
      "userTime": "2019-11-21T22:35:04.976779+01:00",
    },
    "mentions": 0,
    "partner": Object {
      "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
      "displayName": "ajv13028",
      "email": "ajv13028@ssdfd.com",
      "hideEmailField": false,
      "id": 2918,
      "pm": null,
      "status": 16,
      "type": "user",
      "username": "ajv13028",
    },
    "type": "pm",
    "unread": 0,
  },
  Object {
    "created": "2017-12-21T12:34:09.811121Z",
    "favorited": null,
    "grapecallUrl": "https://uebergrape.staging.chatgrape.com/call/3860",
    "groupMentions": 0,
    "icon": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
    "id": 3860,
    "lastMessage": Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
        "displayName": "vrk12395",
        "firstName": "vrk12395",
        "id": 2918,
        "type": "user",
        "username": "vrk12395",
      },
      "cglinks": null,
      "channel": 3860,
      "clientsideId": "dtx6s",
      "docType": "message",
      "edited": null,
      "id": "7a3e6bb60a1811ea84210242c0a83004",
      "linkAttachments": Array [],
      "mentions": Object {
        "group": Array [],
        "user": Array [],
      },
      "organization": 1,
      "permissions": Object {
        "canDeleteMessage": true,
        "canPinMessage": true,
        "canQuoteMessage": true,
        "canUpdateMessage": true,
      },
      "pinned": false,
      "plainText": "text12as",
      "text": "text12as",
      "time": "2019-11-18T15:31:23.462546+00:00",
      "userAttachments": Array [],
      "userTime": "2019-11-18T16:31:23.462546+01:00",
    },
    "mentions": 0,
    "partner": Object {
      "avatar": "https://staging.chatgrape.com/imgsrc/s/avatar/200x200/",
      "displayName": "ajv13028",
      "email": "ajv13028@soioa.com",
      "hideEmailField": false,
      "id": 2674,
      "pm": null,
      "status": 4,
      "type": "user",
      "username": "",
    },
    "type": "pm",
    "unread": 0,
  },
]
`;

exports[`channels reducer should handle correct update unread field on UPDATE_CHANNEL_UNREAD_COUNTER 1`] = `
Array [
  Object {
    "unread": 1,
  },
]
`;

exports[`channels reducer should return same state if channel not found on UPDATE_CHANNEL_UNREAD_COUNTER 1`] = `
Array [
  Object {
    "id": 3338,
    "unread": 1,
  },
]
`;
